# Chula

./: .gitattributes  .gitmodules
2-1/Dig Log Lab/: .gitignore
2-1/Dig Log Lab/espresso/: 2.pla  3.pla  espresso_arm64
2-1/Intro Data Struct/Grader/: A  B  CMakeLists.txt  d57_q0_histogram.cpp  d57_q0_remove_even.cpp  d57_q1_postfix.cpp  d58_q0_rating.cpp  d59_q0_stack_concat.cpp  d59_q0_vector_swap.cpp  d60_q0_v2m.cpp  d62_q1a_punch.cpp  d62_q1a_vote.cpp  d62_q1b_grandfather.cpp  d62_q1b_queue_count.cpp  d62_q1c_vector_intersection.cpp  d62_q1c_vector_op.cpp  d63_q1a_hiatus.cpp  d63_q1b_interval_count.cpp  d63_q1b_list_erase.cpp  d63_qx_inside_interval.cpp  d64_q1a_card_battle.cpp  d64_q1a_second_min.cpp  ds00_reverse.cpp  ds00_reverse2.cpp  ds01_most.cpp  ds01_pair_sum.cpp  ds02_intersection.cpp  ex00e1.cpp  ex00e2.cpp  ex00e3.cpp  ex00m2.cpp  inth.cpp  test_con.cpp  test_little.cpp
2-1/Intro Data Struct/Grader/d57_q1_sbv/: student.h
2-1/Intro Data Struct/Grader/d57_q1_sbv2/: student.h
2-1/Intro Data Struct/Grader/d57_q1_vequal/: student.h
2-1/Intro Data Struct/Grader/d57_q2_heap_order2/: main.cpp
2-1/Intro Data Struct/Grader/d57_q2_kheap/: student.h
2-1/Intro Data Struct/Grader/d57_q3_shift/: shift.h
2-1/Intro Data Struct/Grader/d57_q3_zuma/: main.cpp
2-1/Intro Data Struct/Grader/d58_q1_erase_many/: student.h
2-1/Intro Data Struct/Grader/d58_q1_to_vector/: student.h
2-1/Intro Data Struct/Grader/d58_q2_custom/: song.h
2-1/Intro Data Struct/Grader/d58_q2_hequal/: student.h
2-1/Intro Data Struct/Grader/d58_q3_list_replace/: replace.h
2-1/Intro Data Struct/Grader/d59_q1_pop_many/: student.h
2-1/Intro Data Struct/Grader/d59_q1_range_insert/: student.h
2-1/Intro Data Struct/Grader/d59_q2_heap_find/: student.h
2-1/Intro Data Struct/Grader/d59_q2_queue_equality/: student.h
2-1/Intro Data Struct/Grader/d59_q3_list_split/: list.h  student.h
2-1/Intro Data Struct/Grader/d60_q1_qat/: student.h
2-1/Intro Data Struct/Grader/d60_q1_v_uniq/: student.h
2-1/Intro Data Struct/Grader/d60_q2_heap_height/: student.h
2-1/Intro Data Struct/Grader/d60_q2_split_queue/: student.h
2-1/Intro Data Struct/Grader/d60_q3_lremove_all/: main.cpp  student.h
2-1/Intro Data Struct/Grader/d61_q1_append/: student.h
2-1/Intro Data Struct/Grader/d61_q1_ordered_set/: student.h
2-1/Intro Data Struct/Grader/d61_q2_splitlist/: main.cpp  student.h
2-1/Intro Data Struct/Grader/d62_q2a_iterator_check/: student.h
2-1/Intro Data Struct/Grader/d62_q2a_multi_count/: student.h
2-1/Intro Data Struct/Grader/d62_q2b_stack_deep_push/: student.h
2-1/Intro Data Struct/Grader/d62_q2b_vector_insert_many/: student.h
2-1/Intro Data Struct/Grader/d62_q2c_vector_swap/: student.h  vector.h
2-1/Intro Data Struct/Grader/d62_q2c_wasted_space/: main.cpp
2-1/Intro Data Struct/Grader/d62_q3a_heap_descendant/: main.cpp
2-1/Intro Data Struct/Grader/d62_q3a_heap_node_relation/: main.cpp
2-1/Intro Data Struct/Grader/d62_q3b_kheap_height/: main.cpp
2-1/Intro Data Struct/Grader/d62_q3b_queue_m2f/: student.h
2-1/Intro Data Struct/Grader/d62_q4a_list_shift/: student.h
2-1/Intro Data Struct/Grader/d63_q2a_pair_gte/: pair.h  student.h
2-1/Intro Data Struct/Grader/d63_q2a_vector_mirror/: main.cpp  student.h
2-1/Intro Data Struct/Grader/d63_q2b_stack_reserve/: student.h
2-1/Intro Data Struct/Grader/d63_q2b_vector_compress/: student.h
2-1/Intro Data Struct/Grader/d63_q3a_queue_m2b/: student.h
2-1/Intro Data Struct/Grader/d63_q3a_rank_in_heap/: student.h
2-1/Intro Data Struct/Grader/d63_q3b_heap_change/: student.h
2-1/Intro Data Struct/Grader/d63_q3b_queue_b2f/: student.h
2-1/Intro Data Struct/Grader/d63_q4a_list_reverse/: student.h
2-1/Intro Data Struct/Grader/d63_q4b_list_extract/: main.cpp  student.h
2-1/Intro Data Struct/Grader/d64_q2a_stack_from_set/: student.h
2-1/Intro Data Struct/Grader/d64_q2a_vector_block_swap/: student.h
2-1/Intro Data Struct/Grader/d64_q2b_stack_distribute/: student.h
2-1/Intro Data Struct/Grader/d64_q2b_vector_rotate/: student.h
2-1/Intro Data Struct/Grader/d64_q2c_stack_move_insert/: student.h
2-1/Intro Data Struct/Grader/d64_q2c_vector_less/: student.h
2-1/Intro Data Struct/Grader/d64_q3a_queue_check/: main.cpp
2-1/Intro Data Struct/Grader/d64_q4a_list_merge/: student.h
2-1/Intro Data Struct/Grader/ds02_is_reverse/: main.cpp
2-1/Intro Data Struct/Grader/ds03_heap_erase/: main.cpp
2-1/Intro Data Struct/Grader/ds03_heap_order/: main.cpp
2-1/Intro Data Struct/Grader/ds04_playlist/: main.cpp
2-1/Intro Data Struct/Grader/test_queue_reverse/: main.cpp  queue.h  student.h
2-1/ProgMeth/: .gitignore
2-2/Algo/: .gitignore  Algorithm_grader.ipynb
2-2/CPS/: Can machine think คำถามนี้ถูกขึ้นในปี 1936 โดยนักคณิตศาสตร์และนักวิทยาศาสตร์คอมพิวเตอร์ อลัน ทัวริง.docx  CoverLetter.psd  Presentation1.pptx  Thanat_Presentation.pptx
2-2/Embeded Sys/: 6432067021-PB1.asc  6432067021-PB2.asc  6432067021-PB3.asc  6432067021-PB4.asc  Writeupdocx.docx  template1.asc
2-2/Embeded Sys Lab/: .gitignore
2-2/Prog Lang Princ/: Execise.scala  Exercise.tasty
2-2/TH cult glob/: 643206721_ธนัส วงศ์สมุทร_ข้อที่ 1.docx  643206721_ธนัส วงศ์สมุทร_ข้อที่ 2.docx
3-1/ComSysArch/: HW.docx  fibo  fibo.c  max  max.c  max.s  readme.md  test  test.c  test.s
3-1/ComSysArch/CacheSim/: lru  (+12 more)
3-2/datasci/: .gitignore
3-2/network/: lab1.pka
3-2/pattern/: HW1.ipynb  HW2.ipynb  HW3.ipynb  titanic-high-order.csv  titanic-sex-age.csv  titanic.csv
(+693 files in other folders)
