cmake_minimum_required(VERSION 3.23)
project(Grader)

set(CMAKE_CXX_STANDARD 11)


add_executable(ex00e1 ex00e1.cpp)
add_executable(ex00e2 ex00e2.cpp)
add_executable(ds00_reverse ds00_reverse.cpp)
add_executable(d57_q0_remove_even d57_q0_remove_even.cpp)
add_executable(ds01_pair_sum ds01_pair_sum.cpp)
add_executable(d59_q0_stack_concat d59_q0_stack_concat.cpp)
add_executable(d57_q1_postfix d57_q1_postfix.cpp)
add_executable(d62_q1c_vector_op d62_q1c_vector_op.cpp)
add_executable(d62_q1a_punch d62_q1a_punch.cpp)
add_executable(ds00_reverse2 ds00_reverse2.cpp)
add_executable(d59_q0_vector_swap d59_q0_vector_swap.cpp)
add_executable(ds02_intersection ds02_intersection.cpp)
add_executable(ds01_most ds01_most.cpp)
add_executable(d62_q1c_vector_intersection d62_q1c_vector_intersection.cpp)
add_executable(d64_q1a_second_min d64_q1a_second_min.cpp)
add_executable(d62_q1b_grandfather d62_q1b_grandfather.cpp)
add_executable(d62_q1a_vote d62_q1a_vote.cpp)
add_executable(d58_q0_rating d58_q0_rating.cpp)
add_executable(ex00e3 ex00e3.cpp)
add_executable(d63_qx_inside_interval d63_qx_inside_interval.cpp)
add_executable(d63_q1b_interval_count d63_q1b_interval_count.cpp)
add_executable(d63_q1a_hiatus d63_q1a_hiatus.cpp)
add_executable(d64_q1a_card_battle d64_q1a_card_battle.cpp)
add_executable(d63_q1b_list_erase d63_q1b_list_erase.cpp)
add_executable(d60_q0_v2m d60_q0_v2m.cpp)
add_executable(d57_q0_histogram d57_q0_histogram.cpp)
add_executable(d62_q1b_queue_count d62_q1b_queue_count.cpp)
add_executable(ex00m2 ex00m2.cpp)

add_executable(d63_q2a_pair_gte d63_q2a_pair_gte/main.cpp)
add_executable(ds02_is_reverse ds02_is_reverse/main.cpp)
add_executable(d63_q2a_vector_mirror d63_q2a_vector_mirror/main.cpp)
add_executable(d62_q2c_wasted_space d62_q2c_wasted_space/main.cpp)
add_executable(d62_q2a_iterator_check d62_q2a_iterator_check/main.cpp)
add_executable(d58_q1_erase_many d58_q1_erase_many/main.cpp)
add_executable(d57_q1_vequal d57_q1_vequal/main.cpp)
add_executable(d63_q2b_vector_compress d63_q2b_vector_compress/main.cpp)
add_executable(d62_q2c_vector_swap d62_q2c_vector_swap/main.cpp)
add_executable(d62_q2b_vector_insert_many d62_q2b_vector_insert_many/main.cpp)
add_executable(d61_q1_ordered_set d61_q1_ordered_set/main.cpp)
add_executable(d60_q1_v_uniq d60_q1_v_uniq/main.cpp)
add_executable(d59_q1_range_insert d59_q1_range_insert/main.cpp)
add_executable(d64_q2c_vector_less d64_q2c_vector_less/main.cpp)
add_executable(d64_q2b_vector_rotate d64_q2b_vector_rotate/main.cpp)
add_executable(d64_q2a_vector_block_swap d64_q2a_vector_block_swap/main.cpp)
add_executable(d63_q2b_stack_reserve d63_q2b_stack_reserve/main.cpp)
add_executable(d62_q2b_stack_deep_push d62_q2b_stack_deep_push/main.cpp)
add_executable(d59_q1_pop_many d59_q1_pop_many/main.cpp)
add_executable(d57_q1_sbv2 d57_q1_sbv2/test_stack.cpp)
add_executable(d57_q1_sbv d57_q1_sbv/test_stack.cpp)
add_executable(d64_q2c_stack_move_insert d64_q2c_stack_move_insert/main.cpp)
add_executable(d64_q2b_stack_distribute d64_q2b_stack_distribute/main.cpp)
add_executable(d64_q2a_stack_from_set d64_q2a_stack_from_set/main.cpp)
add_executable(d64_q3a_queue_check d64_q3a_queue_check/main.cpp)
add_executable(d63_q3b_queue_b2f d63_q3b_queue_b2f/main.cpp)
add_executable(d63_q3a_queue_m2b d63_q3a_queue_m2b/main.cpp)
add_executable(d62_q3b_queue_m2f d62_q3b_queue_m2f/main.cpp)
add_executable(d62_q2a_multi_count d62_q2a_multi_count/main.cpp)
add_executable(d61_q1_append d61_q1_append/main.cpp)
add_executable(d60_q2_split_queue d60_q2_split_queue/main.cpp)
add_executable(d60_q1_qat d60_q1_qat/main.cpp)
add_executable(d59_q2_queue_equality d59_q2_queue_equality/main.cpp)
add_executable(d58_q1_to_vector d58_q1_to_vector/main.cpp)
add_executable(ds03_heap_order ds03_heap_order/main.cpp)
add_executable(ds03_heap_erase ds03_heap_erase/main.cpp)
add_executable(d63_q3b_heap_change d63_q3b_heap_change/main.cpp)
add_executable(d63_q3a_rank_in_heap d63_q3a_rank_in_heap/main.cpp)
add_executable(d62_q3b_kheap_height d62_q3b_kheap_height/main.cpp)
add_executable(d62_q3a_heap_node_relation d62_q3a_heap_node_relation/main.cpp)
add_executable(d62_q3a_heap_descendant d62_q3a_heap_descendant/main.cpp)
add_executable(d60_q2_heap_height d60_q2_heap_height/main.cpp)
add_executable(d59_q2_heap_find d59_q2_heap_find/main.cpp)
add_executable(d58_q2_hequal d58_q2_hequal/main.cpp)
add_executable(d58_q2_custom d58_q2_custom/main.cpp)
add_executable(d57_q2_kheap d57_q2_kheap/main.cpp)
add_executable(d57_q2_heap_order2 d57_q2_heap_order2/main.cpp)

add_executable(ds04_playlist ds04_playlist/main.cpp)
add_executable(d64_q4a_list_merge d64_q4a_list_merge/main.cpp)
add_executable(d63_q4b_list_extract d63_q4b_list_extract/main.cpp)
add_executable(d63_q4a_list_reverse d63_q4a_list_reverse/main.cpp)
add_executable(d62_q4a_list_shift d62_q4a_list_shift/main.cpp)
add_executable(d61_q2_splitlist d61_q2_splitlist/main.cpp)
add_executable(d60_q3_lremove_all d60_q3_lremove_all/main.cpp)
add_executable(d59_q3_list_split d59_q3_list_split/main.cpp)
add_executable(d58_q3_list_replace d58_q3_list_replace/main.cpp)
add_executable(d57_q3_zuma d57_q3_zuma/main.cpp)
add_executable(d57_q3_shift d57_q3_shift/main.cpp)

add_executable(test_con test_con.cpp)
add_executable(test_little test_little.cpp)
add_executable(test_queue_reverse test_queue_reverse/main.cpp)
